<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBD0B2"
    tools:context=".menu">

    <Button
        android:id="@+id/btnSobre"
        android:layout_width="326dp"
        android:layout_height="67dp"
        android:layout_marginTop="217dp"
        android:layout_marginBottom="447dp"
        android:background="#864621"
        android:onClick="Sobre"
        android:text="@string/btnsobre"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCatalogo"
        android:layout_width="326dp"
        android:layout_height="65dp"
        android:layout_marginTop="295dp"
        android:layout_marginBottom="371dp"
        android:background="#864621"
        android:onClick="Catalogo"
        android:text="@string/btncatalogo"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLancamento"
        android:layout_width="323dp"
        android:layout_height="63dp"
        android:layout_marginTop="454dp"
        android:layout_marginBottom="214dp"
        android:background="#864621"
        android:onClick="Ingresso"
        android:text="@string/btningresso"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLocalizacao"
        android:layout_width="326dp"
        android:layout_height="61dp"
        android:layout_marginTop="532dp"
        android:layout_marginBottom="138dp"
        android:background="#864621"
        android:onClick="MinhaLocalizacao"
        android:text="@string/btnloca"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnComprarIng"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_marginTop="373dp"
        android:layout_marginBottom="293dp"
        android:background="#864621"
        android:onClick="Lancamento"
        android:text="@string/btnlancamento"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPerfil"
        android:layout_width="325dp"
        android:layout_height="72dp"
        android:layout_marginTop="133dp"
        android:layout_marginBottom="526dp"
        android:background="#864621"
        android:onClick="Perfil"
        android:text="@string/Perfil"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnEmail2"
        android:layout_width="63dp"
        android:layout_height="55dp"
        android:layout_marginStart="174dp"
        android:layout_marginLeft="174dp"
        android:layout_marginTop="637dp"
        android:layout_marginEnd="174dp"
        android:layout_marginRight="174dp"
        android:layout_marginBottom="39dp"
        android:background="#EBD0B2"
        android:onClick="Email"
        android:tint="#864621"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <ImageButton
        android:id="@+id/btnTel2"
        android:layout_width="61dp"
        android:layout_height="58dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="637dp"
        android:layout_marginEnd="312dp"
        android:layout_marginRight="312dp"
        android:layout_marginBottom="36dp"
        android:background="#EBD0B2"
        android:onClick="Ligar"
        android:tint="#864621"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="56dp"
        android:layout_height="55dp"
        android:layout_marginStart="312dp"
        android:layout_marginLeft="312dp"
        android:layout_marginTop="637dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="39dp"
        android:background="#EBD0B2"
        android:onClick="Localizacao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/locaaal" />

    <TextView
        android:id="@+id/txtOi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:layout_marginBottom="629dp"
        android:text="@string/ooi"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>